[package]
name = "pitmaster"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
embedded-graphics-core = "0.3"
embedded-hal = "0.2"
heapless = { version = "0.7", features = [ "ufmt-impl" ]}
nb = "1"
panic-halt = "0.2"
ringbuffer = { version = "0.13.0", default-features = false }
rtic = { version = "2.0", features = [ "thumbv7-backend" ] }
rtic-monotonic = "1.0"
ssd1309 = "0.3"
stm32f1xx-hal = { version = "0.10", features = [ "rt", "stm32f103", "medium" ] }
ufmt = "0.2"

#[patch.crates-io]
#ssd1309 = { dependencies.embedded-graphics-core.version = "0.4.0" }